--- a/ch/index.html
+++ b/ch/index.html
@@ -71,6 +71,7 @@
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">协议</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">代币销售</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">路线图</a></li>
+					<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">社区</a></li>
 					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q&A</a></li>
 				</ul>
@@ -200,6 +201,7 @@
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">协议</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">代币销售</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">路线图</a></li>
+					<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">社区</a></li>
 					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q&A</a></li>
 				</ul>
@@ -228,6 +230,7 @@
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">协议</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">代币销售</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">路线图</a></li>
+					<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">社区</a></li>
 					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q&A</a></li>
 				</ul>
@@ -386,6 +389,7 @@
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">协议</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">代币销售</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">路线图</a></li>
+					<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">社区</a></li>
 					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q&A</a></li>
 				</ul>
@@ -531,6 +535,7 @@
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">协议</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">代币销售</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">路线图</a></li>
+					<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">社区</a></li>
 					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q&A</a></li>
 				</ul>
@@ -618,6 +623,7 @@
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">协议</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">代币销售</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">路线图</a></li>
+					<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">社区</a></li>
 					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q&A</a></li>
 				</ul>
@@ -686,6 +692,7 @@
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">协议</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">代币销售</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">路线图</a></li>
+					<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">社区</a></li>
 					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q&A</a></li>
 				</ul>
@@ -754,6 +761,7 @@
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">协议</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">代币销售</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">路线图</a></li>
+					<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">社区</a></li>
 					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q&A</a></li>
 				</ul>
@@ -794,6 +802,7 @@
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">协议</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">代币销售</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">路线图</a></li>
+					<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">社区</a></li>
 					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q&A</a></li>
 				</ul>
@@ -871,7 +880,8 @@
 				<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">Protocol</a></li>
 				<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">Tokensale</a></li>
 				<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
-				<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
+				<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>
+					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
 				<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q&A</a></li>
 			</ul>
 		</div>
