--- a/kr/index.html
+++ b/kr/index.html
@@ -71,6 +71,7 @@
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">실험 계획안</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
+					<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
 					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q&A</a></li>
 				</ul>
@@ -201,6 +202,7 @@
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">실험 계획안</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
+					<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
 					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q&A</a></li>
 				</ul>
@@ -229,6 +231,7 @@
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">실험 계획안</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
+					<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
 					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q&A</a></li>
 				</ul>
@@ -387,6 +390,7 @@
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">실험 계획안</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
+					<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
 					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q&A</a></li>
 				</ul>
@@ -474,6 +478,7 @@
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">실험 계획안</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
+					<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
 					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q&A</a></li>
 				</ul>
@@ -542,6 +547,7 @@
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">실험 계획안</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
+					<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
 					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q&A</a></li>
 				</ul>
@@ -610,6 +616,7 @@
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">실험 계획안</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
+					<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
 					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q&A</a></li>
 				</ul>
@@ -755,6 +762,7 @@
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">실험 계획안</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
+					<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
 					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q&A</a></li>
 				</ul>
@@ -795,6 +803,7 @@
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">실험 계획안</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
+					<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
 					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q&A</a></li>
 				</ul>
@@ -872,7 +881,8 @@
 				<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">Protocol</a></li>
 				<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">Tokensale</a></li>
 				<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
-				<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
+				<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>
+					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
 				<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q&A</a></li>
 			</ul>
 		</div>
