--- a/ch/index.html
+++ b/ch/index.html
@@ -73,7 +73,7 @@
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">路线图</a></li>
 					<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">社区</a></li>
-					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q&A</a></li>
+					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q/A</a></li>
 				</ul>
 			</div>
 			<div class="colored-bg-elements">
@@ -203,7 +203,7 @@
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">路线图</a></li>
 					<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">社区</a></li>
-					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q&A</a></li>
+					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q/A</a></li>
 				</ul>
 			</div>
 			<section class="box box-table ledger" id="ledger">
@@ -232,7 +232,7 @@
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">路线图</a></li>
 					<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">社区</a></li>
-					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q&A</a></li>
+					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q/A</a></li>
 				</ul>
 			</div>
 			<div class="colored-bg-elements">
@@ -391,7 +391,7 @@
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">路线图</a></li>
 					<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">社区</a></li>
-					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q&A</a></li>
+					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q/A</a></li>
 				</ul>
 			</div>
 			<div class="colored-bg-elements">
@@ -537,7 +537,7 @@
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">路线图</a></li>
 					<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">社区</a></li>
-					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q&A</a></li>
+					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q/A</a></li>
 				</ul>
 			</div>
 			<div class="colored-bg-elements">
@@ -625,7 +625,7 @@
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">路线图</a></li>
 					<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">社区</a></li>
-					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q&A</a></li>
+					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q/A</a></li>
 				</ul>
 			</div>
 			<section class="box box-table tokensale" id="tokensale">
@@ -694,7 +694,7 @@
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">路线图</a></li>
 					<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">社区</a></li>
-					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q&A</a></li>
+					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q/A</a></li>
 				</ul>
 			</div>
 			<div class="box-bg-image" style="background-image: url(/images/roadmap-image-ch.png);"><img src="/images/roadmap-image-m.jpg"></div>
@@ -763,7 +763,7 @@
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">路线图</a></li>
 					<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">社区</a></li>
-					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q&A</a></li>
+					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q/A</a></li>
 				</ul>
 			</div>
 			<div class="colored-bg-elements">
@@ -804,7 +804,7 @@
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">路线图</a></li>
 					<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">社区</a></li>
-					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q&A</a></li>
+					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q/A</a></li>
 				</ul>
 			</div>
 			<section class="box box-table social" id="social">
@@ -882,7 +882,7 @@
 				<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
 				<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
-				<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q&A</a></li>
+				<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q/A</a></li>
 			</ul>
 		</div>
 		<section class="box box-table faq go-animate" id="faq">
@@ -1017,7 +1017,7 @@
 					<div class="faq-list-item">
 						<div class="faq-quest">When will your IEO start?</div>
 						<div class="faq-answer">
-							<p>The start of IEO is scheduled for July 15.</p>
+							<p>The start of IEO is scheduled for July.</p>
 						</div>
 					</div>
 					<div class="faq-list-item">
