--- a/kr/index.html
+++ b/kr/index.html
@@ -73,7 +73,7 @@
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
 					<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
-					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q&A</a></li>
+					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q/A</a></li>
 				</ul>
 			</div>
 			<div class="colored-bg-elements">
@@ -204,7 +204,7 @@
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
 					<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
-					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q&A</a></li>
+					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q/A</a></li>
 				</ul>
 			</div>
 			<section class="box box-table ledger" id="ledger">
@@ -233,7 +233,7 @@
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
 					<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
-					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q&A</a></li>
+					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q/A</a></li>
 				</ul>
 			</div>
 			<div class="colored-bg-elements">
@@ -392,7 +392,7 @@
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
 					<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
-					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q&A</a></li>
+					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q/A</a></li>
 				</ul>
 			</div>
 			<div class="colored-bg-elements">
@@ -480,7 +480,7 @@
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
 					<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
-					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q&A</a></li>
+					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q/A</a></li>
 				</ul>
 			</div>
 			<section class="box box-table tokensale go-animate" id="tokensale">
@@ -549,7 +549,7 @@
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
 					<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
-					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q&A</a></li>
+					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q/A</a></li>
 				</ul>
 			</div>
 			<div class="box-bg-image" style="background-image: url(/images/roadmap-image.jpg);"><img src="/images/roadmap-image-m.jpg"></div>
@@ -618,7 +618,7 @@
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
 					<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
-					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q&A</a></li>
+					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q/A</a></li>
 				</ul>
 			</div>
 			<div class="colored-bg-elements">
@@ -764,7 +764,7 @@
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
 					<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
-					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q&A</a></li>
+					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q/A</a></li>
 				</ul>
 			</div>
 			<div class="colored-bg-elements">
@@ -805,7 +805,7 @@
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
 					<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
-					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q&A</a></li>
+					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q/A</a></li>
 				</ul>
 			</div>
 			<section class="box box-table social" id="social">
@@ -883,7 +883,7 @@
 				<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
 				<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
-				<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q&A</a></li>
+				<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q/A</a></li>
 			</ul>
 		</div>
 		<section class="box box-table faq go-animate" id="faq">
@@ -1018,7 +1018,7 @@
 					<div class="faq-list-item">
 						<div class="faq-quest">When will your IEO start?</div>
 						<div class="faq-answer">
-							<p>The start of IEO is scheduled for July 15.</p>
+							<p>The start of IEO is scheduled for July.</p>
 						</div>
 					</div>
 					<div class="faq-list-item">
