--- a/jp/index.html
+++ b/jp/index.html
@@ -1048,7 +1048,7 @@
 				<a href="/policy.html">個人情報保護方針</a>
 			</div>
 		</footer>
-		<div class="bottom-panel">
+		<div class="bottom-panel last">
 			<a href="https://t.me/pprotocol" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
 		</div>
 	</div>
