--- a/kr/index.html
+++ b/kr/index.html
@@ -1045,7 +1045,7 @@
 				</span>
 				<img alt="" src="/images/flag-ec.png"></div>
 		</footer>
-		<div class="bottom-panel">
+		<div class="bottom-panel last">
 			<a href="https://t.me/pprotocol" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
 		</div>
 	</div>
