--- a/index.html
+++ b/index.html
@@ -31,9 +31,12 @@
 
 	<div class="page-wrapper">
 		<header class="box">
-			<a href="/" title="" class="page-logo">
-				<img src="/images/page-logo.png" alt="Product Protocol">
-			</a>
+			<h1 class="logo-wrapper">
+				<a href="/" title="" class="page-logo">
+					<img src="/images/page-logo.png" alt="">
+				</a>
+				Product Protocol
+			</h1>
 		</header>
 		<div class="nav-wrapper box">
 			<nav class="header-nav">
@@ -124,7 +127,7 @@
 							<div class="main-image-box-icon"><img src="/images/main-small-image-1.png" alt="" class="main-small-image im-1"></div>
 						</div>
 					</div>
-					<h1 class="first-title">Business <br>tokenization <br>protocol</h1>
+					<div class="first-title">Business <br>tokenization <br>protocol</div>
 					<div class="form main-form">
 						<div class="form-box">
 							<div class="form-box-container js-to-bottom-panel">
