--- a/kr/index.html
+++ b/kr/index.html
@@ -31,9 +31,12 @@
 
 	<div class="page-wrapper">
 		<header class="box">
-			<a href="/kr/" title="" class="page-logo">
-				<img src="/images/page-logo.png" alt="Product Protocol">
-			</a>
+			<h1 class="logo-wrapper">
+				<a href="/kr/" title="" class="page-logo">
+					<img src="/images/page-logo.png" alt="">
+				</a>
+				Product Protocol
+			</h1>
 		</header>
 		<div class="nav-wrapper box">
 			<nav class="header-nav">
@@ -125,7 +128,7 @@
 							<div class="main-image-box-icon"><img src="/images/main-small-image-1.png" alt="" class="main-small-image im-1"></div>
 						</div>
 					</div>
-					<h1 class="first-title">사업 <br>토큰화 <br>실험 계획안</h1>
+					<div class="first-title">사업 <br>토큰화 <br>실험 계획안</div>
 					<div class="form main-form">
 						<div class="form-box">
 							<div class="form-box-container js-to-bottom-panel">
