--- a/jp/index.html
+++ b/jp/index.html
@@ -31,12 +31,12 @@
 
 	<div class="page-wrapper">
 		<header class="box">
-			<h1 class="logo-wrapper">
+			<div class="logo-wrapper">
 				<a href="/jp/" title="" class="page-logo">
 					<img src="/images/page-logo.png" alt="">
 				</a>
-				Product Protocol
-			</h1>
+				<h1>Product Protocol</h1>
+			</div>
 		</header>
 		<div class="nav-wrapper box">
 			<nav class="header-nav">
