--- a/ch/index.html
+++ b/ch/index.html
@@ -631,6 +631,10 @@
 					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q/A</a></li>
 				</ul>
 			</div>
+			<div class="colored-bg-elements">
+				<div class="blot blot-15"></div>
+				<div class="blot blot-14"></div>
+			</div>
 			<section class="box box-table tokensale" id="tokensale">
 				<!--
 				<div class="box-cell">
@@ -699,6 +703,10 @@
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">社区</a></li>
 					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q/A</a></li>
 				</ul>
+			</div>
+			<div class="colored-bg-elements">
+				<div class="blot blot-15"></div>
+				<div class="blot blot-14"></div>
 			</div>
 			<div class="box-bg-image" style="background-image: url(/images/roadmap-image-ch.png);"><img src="/images/roadmap-image-m.jpg"></div>
 			<section class="box box-table roadmap go-animate" id="roadmap">
