--- a/kr/index.html
+++ b/kr/index.html
@@ -486,6 +486,10 @@
 					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q/A</a></li>
 				</ul>
 			</div>
+			<div class="colored-bg-elements">
+				<div class="blot blot-15"></div>
+				<div class="blot blot-14"></div>
+			</div>
 			<section class="box box-table tokensale go-animate" id="tokensale">
 				<!--
 				<div class="box-cell">
@@ -538,7 +542,7 @@
 				<a href="/users/sign_up" class="button white moved-to-bottom-panel hide">개인적 판매에 참여하다</a>
 			</div>
 		</div>
-		<div class="box-wrapper colored-bg dark-bg">
+		<div class="box-wrapper colored-bg">
 			<div class="page-scroller-wrapper">
 				<ul class="page-scroller">
 					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">집</a></li>
@@ -554,6 +558,10 @@
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
 					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q/A</a></li>
 				</ul>
+			</div>
+			<div class="colored-bg-elements">
+				<div class="blot blot-15"></div>
+				<div class="blot blot-14"></div>
 			</div>
 			<div class="box-bg-image" style="background-image: url(/images/roadmap-image.jpg);"><img src="/images/roadmap-image-m.jpg"></div>
 			<section class="box box-table roadmap go-animate" id="roadmap">
