--- a/jp/index.html
+++ b/jp/index.html
@@ -631,6 +631,10 @@
 					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q/A</a></li>
 				</ul>
 			</div>
+			<div class="colored-bg-elements">
+				<div class="blot blot-15"></div>
+				<div class="blot blot-14"></div>
+			</div>
 			<section class="box box-table tokensale" id="tokensale">
 				<!--
 				<div class="box-cell">
@@ -683,7 +687,7 @@
 				<a href="/users/sign_up" class="button white moved-to-bottom-panel hide">プレIEOに参加する</a>
 			</div>
 		</div>
-		<div class="box-wrapper colored-bg dark-bg">
+		<div class="box-wrapper colored-bg">
 			<div class="page-scroller-wrapper">
 				<ul class="page-scroller">
 					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">主頁</a></li>
@@ -699,6 +703,10 @@
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">社会的</a></li>
 					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q/A</a></li>
 				</ul>
+			</div>
+			<div class="colored-bg-elements">
+				<div class="blot blot-15"></div>
+				<div class="blot blot-14"></div>
 			</div>
 			<div class="box-bg-image" style="background-image: url(/images/roadmap-image-jp.jpg);"><img src="/images/roadmap-image-m.jpg"></div>
 			<section class="box box-table roadmap go-animate" id="roadmap">
