--- a/kr/index.html
+++ b/kr/index.html
@@ -468,7 +468,7 @@
 				<a href="/users/sign_up" class="button white moved-to-bottom-panel hide">개인적 판매에 참여하다</a>
 			</div>
 		</div>
-		<div class="colored-bg v2 box-wrapper token-inside">
+		<div class="box-wrapper token-inside">
 			<div class="box-bg-image" style="background-image: url(/images/tokensale-bg-image.png);"></div>
 			<div class="page-scroller-wrapper">
 				<ul class="page-scroller">
@@ -542,7 +542,7 @@
 				<a href="/users/sign_up" class="button white moved-to-bottom-panel hide">개인적 판매에 참여하다</a>
 			</div>
 		</div>
-		<div class="box-wrapper colored-bg">
+		<div class="box-wrapper">
 			<div class="page-scroller-wrapper">
 				<ul class="page-scroller">
 					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">집</a></li>
