--- a/index.html
+++ b/index.html
@@ -687,7 +687,7 @@
 				<a href="/users/sign_up" class="button white moved-to-bottom-panel hide">Participate in pre-IEO</a>
 			</div>
 		</div>
-		<div class="box-wrapper">
+		<div class="box-wrapper white-bg">
 			<div class="page-scroller-wrapper">
 				<ul class="page-scroller">
 					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">Home</a></li>
