--- a/kr/index.html
+++ b/kr/index.html
@@ -542,7 +542,7 @@
 				<a href="/users/sign_up" class="button white moved-to-bottom-panel hide">개인적 판매에 참여하다</a>
 			</div>
 		</div>
-		<div class="box-wrapper">
+		<div class="box-wrapper white-bg">
 			<div class="page-scroller-wrapper">
 				<ul class="page-scroller">
 					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">집</a></li>
