--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
 			</div>
 		</div>
 		<div class="box-wrapper token-inside">
-			<div class="box-bg-image" style="background-image: url(/images/tokensale-bg-image.png);"></div>
+			<div class="box-bg-image" style="background-image: url(/images/tokensale-bg-image.png);"><img src="/images/tokensale-bg-image.png" alt=""></div>
 			<div class="page-scroller-wrapper">
 				<ul class="page-scroller">
 					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">Home</a></li>
