--- a/kr/index.html
+++ b/kr/index.html
@@ -192,7 +192,7 @@
 				<a href="https://t.me/pprotocol" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
 			</div>
 		</div>
-		<div class="colored-bg box-wrapper ledger-wrapper">
+		<div class="box-wrapper ledger-wrapper">
 			<div class="box-bg-image" style="background-image: url(/images/ledger-bg-image.jpg);"><img src="/images/ledger-bg-image.jpg" alt=""></div>
 			<div class="page-scroller-wrapper">
 				<ul class="page-scroller">
@@ -352,6 +352,13 @@
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
+										<img src="/images/amb-image-8.png" alt="">
+									</div>
+									<a href="https://www.linkedin.com/in/raghav-sawhney/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
+									<div class="team-name">Raghav Sawhney</div>
+								</div>
+								<div class="team-slide">
+									<div class="team-image">
 										<img src="/images/amb-image-3.png" alt="">
 									</div>
 									<a href="https://www.linkedin.com/in/vilniuscapital/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
@@ -370,6 +377,13 @@
 									</div>
 									<a href="https://www.linkedin.com/in/williambryant1/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
 									<div class="team-name">Will Bryant</div>
+								</div>
+								<div class="team-slide">
+									<div class="team-image">
+										<img src="/images/amb-image-7.png" alt="">
+									</div>
+									<a href="https://www.linkedin.com/in/gaurav-areng-chakraverti/" target="_blank" class="team-icon"><img src="/images/linked-icon.png" alt=""></a>
+									<div class="team-name">Gaurav Areng</div>
 								</div>
 							</div>
 						</div>
