--- a/ch/index.html
+++ b/ch/index.html
@@ -815,7 +815,7 @@
 				<a href="/users/sign_up" class="button white moved-to-bottom-panel hide">参加预IEO</a>
 			</div>
 		</div>
-		<div class="colored-bg v4 box-wrapper">
+		<div class="box-wrapper">
 			<div class="page-scroller-wrapper">
 				<ul class="page-scroller">
 					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">主页</a></li>
@@ -831,6 +831,10 @@
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">社区</a></li>
 					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q/A</a></li>
 				</ul>
+			</div>
+			<div class="colored-bg-elements">
+				<div class="blot blot-12"></div>
+				<div class="blot blot-13"></div>
 			</div>
 			<section class="box box-table social" id="social">
 				<div class="box-cell">
