--- a/index.html
+++ b/index.html
@@ -209,6 +209,10 @@
 					<li class="page-scroller-item"><a href="#faq" class="page-scroller-link">Q/A</a></li>
 				</ul>
 			</div>
+			<div class="colored-bg-elements">
+				<div class="bg-image bg-image-1"></div>
+				<div class="blot blot-14"></div>
+			</div>
 			<section class="box box-table ledger" id="ledger">
 				<div class="box-cell">
 					<h2 class="box-title">
