--- a/index.html
+++ b/index.html
@@ -192,7 +192,6 @@
 			</div>
 		</div>		
 		<div class="box-wrapper ledger-wrapper">
-			<div class="box-bg-image" style="background-image: url(/images/ledger-bg-image.jpg);"><img src="/images/ledger-bg-image.jpg" alt=""></div>
 			<div class="page-scroller-wrapper">
 				<ul class="page-scroller">
 					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">Home</a></li>
@@ -219,6 +218,7 @@
 						Ledger
 					</h2>
 				</div>
+				<img src="/images/ledger-bg-image.jpg" alt="" class="box-image">
 			</section>
 			<div class="bottom-panel">
 				<a href="https://t.me/pprotocol" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
