--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@
 					<h2 class="box-title">
 						Ledger
 					</h2>
+					<img src="/images/ledger-bg-image.png" alt="" class="box-image">
 				</div>
-				<img src="/images/ledger-bg-image.jpg" alt="" class="box-image">
 			</section>
 			<div class="bottom-panel">
 				<a href="https://t.me/pprotocol" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
