--- a/index.html
+++ b/index.html
@@ -219,7 +219,8 @@
 					<h2 class="box-title">
 						Ledger
 					</h2>
-					<img src="/images/ledger-bg-image.png" alt="" class="box-image">
+					<img src="/images/ledger-bg-image.png" alt="" class="box-image mobile-hide">
+					<img src="/images/ledger-bg-image-mobile.png.png" alt="" class="box-image mobile-show">
 				</div>
 			</section>
 			<div class="bottom-panel">
