--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 						Ledger
 					</h2>
 					<img src="/images/ledger-bg-image.png" alt="" class="box-image mobile-hide">
-					<img src="/images/ledger-bg-image-mobile.png.png" alt="" class="box-image mobile-show">
+					<img src="/images/ledger-bg-image-mobile.png" alt="" class="box-image mobile-show">
 				</div>
 			</section>
 			<div class="bottom-panel">
