--- a/index.html
+++ b/index.html
@@ -635,7 +635,6 @@
 			</div>
 		</div>
 		<div class="box-wrapper token-inside">
-			<div class="box-bg-image" style="background-image: url(/images/tokensale-bg-image.png);"><img src="/images/tokensale-bg-image.png" alt=""></div>
 			<div class="page-scroller-wrapper">
 				<ul class="page-scroller">
 					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">Home</a></li>
@@ -657,51 +656,11 @@
 				<div class="blot blot-14"></div>
 			</div>
 			<section class="box box-table tokensale" id="tokensale">
-				<!--
-				<div class="box-cell">
-					<h2 class="box-title">
-						Tokensale
-					</h2>
-					<h3 class="box-title-ann">Tokensale</h3>
-					<div class="split">
-						<div class="split-col">
-							<div class="graph-wrapper">
-								<div class="graph-title">
-									Funds allocation:
-								</div>
-								<div class="graph">
-									<div class="graph-circle-title">100 %</div>
-									<div class="diag diag-1"></div>
-								</div>
-								<div class="graph-text">
-									<div class="graph-text-box"><strong>30%</strong> - marketing and first tokenized products</div>
-									<div class="graph-text-box"><strong>35%</strong> - development and PP coin fund  </div>
-									<div class="graph-text-box"><strong>10%</strong> - legal, salary, lawyers  </div>
-									<div class="graph-text-box"><strong>10%</strong> - technology support</div>
-									<div class="graph-text-box"><strong>15%</strong> - team</div>
-								</div>
-							</div>
-						</div>
-						<div class="split-col">
-							<div class="graph-wrapper">
-								<div class="graph-title">
-									Crowdsale details:
-								</div>
-								<div class="graph">
-									<div class="graph-circle-title">100 M PPO</div>
-									<div class="diag diag-1"></div>
-								</div>
-								<div class="graph-text">
-									<div class="graph-text-box"><strong>1. 65 000 000 PPO</strong> - IEO</div>
-									<div class="graph-text-box"><strong>2. 15 000 000 PPO</strong> - team and associates</div>
-									<div class="graph-text-box"><strong>3. 15 000 000 PPO</strong> - platform support</div>
-									<div class="graph-text-box"><strong>4. 5 000 000 PPO</strong> - marketing and advisors</div>
-								</div>
-							</div>
-						</div>
-					</div>
+				<img src="/images/tokensale-image-top.png" alt="" class="box-image mobile-hide">
+				<div class="tokensale-images">
+					<img src="/images/tokensale-image-left.png" alt="" class="box-image mobile-hide">
+					<img src="/images/tokensale-image-right.png" alt="" class="box-image mobile-hide">
 				</div>
-				-->
 			</section>
 			<div class="bottom-panel">
 				<a href="https://t.me/pprotocol" class="bottom-panel-button"><span class="icon teleg-icon"></span></a>
