--- a/index.html
+++ b/index.html
@@ -656,10 +656,10 @@
 				<div class="blot blot-14"></div>
 			</div>
 			<section class="box box-table tokensale" id="tokensale">
-				<img src="/images/tokensale-image-top.png" alt="" class="box-image mobile-hide">
+				<img src="/images/tokensale-image-top.png" alt="" class="box-image">
 				<div class="tokensale-images">
-					<img src="/images/tokensale-image-left.png" alt="" class="box-image mobile-hide">
-					<img src="/images/tokensale-image-right.png" alt="" class="box-image mobile-hide">
+					<img src="/images/tokensale-image-left.png" alt="" class="box-image">
+					<img src="/images/tokensale-image-right.png" alt="" class="box-image">
 				</div>
 			</section>
 			<div class="bottom-panel">
