--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
 	<div class="page-wrapper">
 		<div class="scroll-elements">
 			<div class="box">
-				<a href="" class="button button-telegram"></a>
+				<a href="https://t.me/pprotocol" class="button button-telegram"></a>
 			</div>
 		</div>
 		<div class="section-wrapper header-wrapper">
 			<header class="box header">
 				<h1 href="#" class="header-logo">
-					<a href="#"><img src="images/header-logo.png" alt=""></a>
+					<a href="/"><img src="images/header-logo.png" alt=""></a>
 					<span class="header-logo-text">Product Protocol</span>
 				</h1>
 				<a href="#" class="nav-button">
