--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 							Protocol
 						</b>
 					</h2>
-					<a href="#" class="button button-blue">
+					<a href="/users/sign_up" class="button button-blue">
 						<button id="readyButton" type="submit" class="default_green_button checkout_last" data-locked="0" onClick="_gaq.push(['_trackEvent', 'Knopka1', 'PrivateSale']);">
 							Participate in Pre-IEO
 						</button>
