--- a/index.html
+++ b/index.html
@@ -1,21 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Main page</title>
+	<title>Product Protocol</title>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="description" content="">
-	<meta name="author" content="">
+	<meta name="description" content="Product Protocol - Business tokenization protocol">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700&display=swap" rel="stylesheet">
+
+	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="/favicon.ico" type="image/x-icon">
 
 	<link rel="stylesheet" href="css/reset.css" media="all">
 	<link rel="stylesheet" href="css/slick.css" media="all">
 	<link rel="stylesheet" href="css/jquery.fancybox.min.css" media="all">
 	<link rel="stylesheet" href="css/style.css" media="all">
+
+	<!-- <Google Tag Manager -->
+	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+	})(window,document,'script','dataLayer','GTM-T33L63Q');</script>
+	<!-- End Google Tag Manager> -->
 </head>
 <body>
+	<!-- <Google Tag Manager (noscript) -->
+	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T33L63Q"
+	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+	<!-- End Google Tag Manager (noscript)> -->
+	
 	<div class="box navsc-wrapper">
 		<ul class="navsc" id="navsc">
 			<li><a href="#main">Home</a></li>
